@@ -51,7 +51,7 @@ public class AssertTest {
     assertEquals(a, b);
     assertEquals(a, b, "");
     assertEquals(b, a);
-    assertEquals(b, a, "");
+    assertEquals(Long.valueOf(b), a, "");
   }
 
   @Test(description = "GITHUB-2652")
